# nixbox

./: .gitignore  .tmuxp.yaml  AGENT.md  AGENTFS_PYDANTIC_EXTENSION_PLAN.md  CONCEPT.md  README.md  SPEC.md  STEP2_PROGRESS.md  STEP3_PROGRESS.md  TESTING.md  compose.yaml  devenv.nix  devenv.yaml  module.nix  pyproject.toml
.agent/: README.md
.agent/skills/: SKILL-AGENTFS.md  SKILL-DEVENV.md  SKILL-JJ.md  SKILL-MONTY.md  SKILL-NEOVIM.md  SKILL-TMUX.md
.archive/old-docs/: BRAINSTORM.md  README.md
.context/: pydantic-monty-default-v1.txt  tursodatabase-agentfs-default-v1.txt
.context/cairn/: CHIMERA_TMUX_ENHANCEMENT_CONCEPT.md  LIFECYCLE_REFACTORING.md  README.md  chimera.lua  chimera.py  devenv.nix  examples.md  init_stable.py  mvp_architecture.md  pyproject.toml
.github/workflows/: ci.yml
.refactoring/: EXAMPLE_01_hexagonal_orchestrator_ux.md  EXAMPLE_02_pipeline_agent_run_ux.md  EXAMPLE_03_toolset_external_functions_ux.md  EXAMPLE_04_state_machine_events_ux.md  EXAMPLE_05_workspace_strategy_ux.md  REFACTORING_PROPOSAL_01_hexagonal_orchestrator.md  REFACTORING_PROPOSAL_02_pipeline_agent_run.md  REFACTORING_PROPOSAL_03_toolset_external_functions.md  REFACTORING_PROPOSAL_04_state_machine_events.md  REFACTORING_PROPOSAL_05_workspace_strategy.md
.roadmap/: DEV_GUIDE-OVERVIEW.md  DEV_GUIDE-STEP_01.md  DEV_GUIDE-STEP_02.md  DEV_GUIDE-STEP_03.md  DEV_GUIDE-STEP_04.md  DEV_GUIDE-STEP_05.md  DEV_GUIDE-STEP_06.md  DEV_GUIDE-STEP_07.md  DEV_GUIDE-STEP_08.md  DEV_GUIDE-STEP_09.md  DEV_GUIDE-STEP_10.md  DEV_GUIDE-STEP_11.md  DEV_GUIDE-STEP_12.md  DEV_GUIDE-STEP_13.md  DEV_GUIDE-STEP_14.md  DEV_GUIDE-STEP_15.md  DEV_GUIDE-STEP_16.md  DEV_GUIDE-STEP_17.md  DEV_GUIDE-STEP_18.md  MANIFEST.md  README.md  ROADMAP-STEP_1.md  ROADMAP-STEP_2.md  ROADMAP-STEP_3.md  ROADMAP-STEP_4.md  ROADMAP-STEP_5.md
.scratch/projects/01-deploy-and-tailscale/: README.md  compose.tailscale.yaml
.scratch/projects/02-zellij-submodule-refactor/: README.md
.simplification/01-single-agent-worker/: EXAMPLE_EXPERIENCE.md  SIMPLIFICATION_PROPOSAL.md
.simplification/02-command-ingress/: EXAMPLE_EXPERIENCE.md  SIMPLIFICATION_PROPOSAL.md
.simplification/03-minimal-external-api/: EXAMPLE_EXPERIENCE.md  SIMPLIFICATION_PROPOSAL.md
.simplification/04-storage-lifecycle-simplification/: EXAMPLE_EXPERIENCE.md  SIMPLIFICATION_PROPOSAL.md
.simplification/05-doc-surface-reduction/: EXAMPLE_EXPERIENCE.md  SIMPLIFICATION_PROPOSAL.md
.simplification/06-retry-path-pruning/: EXAMPLE_EXPERIENCE.md  SIMPLIFICATION_PROPOSAL.md
01-deploy-and-tailscale/: README.md
agentfs-pydantic/: README.md  STEP1_PROGRESS.md  pyproject.toml  pytest.ini
agentfs-pydantic/examples/: basic_usage.py
agentfs-pydantic/src/agentfs_pydantic/: __init__.py  models.py  view.py
agentfs-pydantic/tests/: __init__.py  conftest.py  test_integration.py  test_models.py  test_performance.py  test_property_based.py
cairn/: __init__.py  agent.py  cli.py  code_generator.py  commands.py  executor.py  external_functions.py  external_models.py  kv_models.py  kv_store.py  lifecycle.py  orchestrator.py  queue.py  retry.py  settings.py  signals.py  watcher.py  workspace.py
cairn/nvim/doc/: cairn.txt
cairn/nvim/lua/cairn/: commands.lua  config.lua  ghost.lua  init.lua  tmux.lua  watcher.lua
cairn/nvim/plugin/: cairn.lua
cairn/nvim/tests/: commands_spec.lua  config_spec.lua  ghost_spec.lua  minimal_init.lua  tmux_spec.lua  watcher_spec.lua
demos/: README.md  devenv.nix  devenv.yaml  run.sh
docs/skills/: SKILL-DEVENV.md  SKILL-JJ.md  SKILL-MONTY.md  SKILL-TMUX.md
examples/: basic_usage.py
examples/cairn/: README.md  add_docstrings.py  add_type_hints.py  fix_todos.py
examples/fornix/: README.md  devenv.nix  devenv.yaml
modules/: devenv.nix
modules/config/: VENDORING.md
modules/config/nvim/: .gitignore  .nvimlog  init.lua  neoconf.json
modules/config/nvim/.loci/: AGENTS.md  backlinks.json  index.json  index.md  loci.json  tags.json
modules/config/nvim/docs/: KEYBINDINGS.md  OVERVIEW.md
modules/config/zellij/: config.kdl  terminal-config.kdl
modules/playwright/: demo.cjs
modules/zellij/: default.nix  plugins.nix
scripts/: ci.sh  fetch-zellij-plugins.sh  sync-config.sh
skills/: ENVIRONMENT_SETUP_SKILL.md  FILESYSTEM_QUERY_SKILL.md  TOOL_TRACKING_SKILL.md
src/nixbox/: __init__.py  view.py
tests/: __init__.py  conftest.py  test_models.py
tests/cairn/: __init__.py  conftest.py  test_agent.py  test_cli.py  test_code_generator.py  test_commands.py  test_e2e_smoke.py  test_executor.py  test_executor_integration.py  test_external_functions.py  test_lifecycle.py  test_orchestrator.py  test_queue.py  test_retry.py  test_settings.py  test_signals.py  test_stage3_queue_agent.py  test_watcher.py  test_workspace.py
tests/fixtures/hello/: README.md  hello.py
(+388 files in other folders)
