[project]
name = "devenv-agentfs"
version = "0.1.0"
description = "devenv.sh modular plugin template for running a local Turso AgentFS process"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Bullish Design" }]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.uv.workspace]
members = [
    "agentfs-pydantic",
]
