# pyproject.toml
[project]
name = "chimera"
version = "0.1.0"
description = "Shared-state agentic workspace via AgentFS & Monty"
requires-python = ">=3.11"
dependencies = [
    "agentfs-sdk>=0.6.0",
    "pydantic-monty>=0.1.0",
    "httpx>=0.27.0",
    "watchfiles>=0.21.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
